<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.electronicshop.ui.HomeFragment"
        android:label="@string/title_main_page" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.electronicshop.ui.DetailFragment"
        android:label="@string/title_detail_page" >
        <action
            android:id="@+id/action_detailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.electronicshop.ui.CartFragment"
        android:label="@string/title_cart_page" >
        <action
            android:id="@+id/action_cartFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>