<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_30"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top_bottom_sheet"
    android:paddingStart="@dimen/padding_start_bottom_sheet"
    android:paddingEnd="@dimen/padding_end_bottom_sheet"
    android:paddingBottom="@dimen/padding_bottom_bottom_sheet"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bottom_sheet_close"
        app:layout_constraintTop_toTopOf="@id/bottom_sheet_done_button"
        app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_done_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/size_close_button"
        android:layout_height="@dimen/size_close_button"
        android:src="@drawable/ic_close"
        android:background="@drawable/rounded_dark_10"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/bottom_sheet_done_button"
        app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_done_button"
        app:layout_constraintStart_toEndOf="@id/bottom_sheet_close"
        app:layout_constraintEnd_toStartOf="@id/bottom_sheet_done_button"
        android:text="@string/filter_options"
        android:textSize="@dimen/size_filter_options"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottom_sheet_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_done"
        android:background="@drawable/rounded_orange_10"
        android:textColor="@color/white"
        android:minHeight="0dp"
        android:textSize="@dimen/size_done_button"
        android:minWidth="0dp"
        android:paddingVertical="@dimen/padding_vertical_done_button"
        android:paddingHorizontal="@dimen/padding_horizontal_done_button"

        />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/spinners_wrapper"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_close"
            android:paddingTop="@dimen/padding_top_spinners_wrapper"
            android:layout_marginEnd="@dimen/margin_end_spinners_wrapper"
            android:orientation="vertical"
             android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/brand"
                />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/brand_selector"
                android:layout_marginTop="@dimen/margin_top_selector"
                android:background="@drawable/rounded_corners_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/selector_height"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:layout_marginTop="@dimen/margin_top_label_selector"
                />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/price_selector"
                android:layout_marginTop="@dimen/margin_top_selector"
                android:background="@drawable/rounded_corners_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/selector_height"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/size"
                android:layout_marginTop="@dimen/margin_top_label_selector"
                />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/size_selector"
                android:layout_marginTop="@dimen/margin_top_selector"
                android:background="@drawable/rounded_corners_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/selector_height"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>