<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?android:actionBarSize"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cart_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/text_size_cart_title"
        android:layout_marginStart="@dimen/margin_start_cart_title"
        android:layout_marginVertical="@dimen/margin_vertical_cart_title"
        android:textFontWeight="700"
        android:text="@string/title_my_cart"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/padding_horizontal_cart_container"
        android:layout_marginTop="@dimen/margin_top_cart_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="@dimen/padding_top_cart_container"
        android:paddingBottom="@dimen/padding_bottom_cart_container"
        android:background="@drawable/rounded_cart_background"
        app:layout_constraintTop_toBottomOf="@id/cart_title">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/second_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toTopOf="@id/add_to_cart_button"
            app:layout_constraintStart_toStartOf="parent"
            app:dividerColor="@color/white33"
            android:layout_marginBottom="@dimen/margin_top_add_to_cart_button"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/cart_container"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/checkout_button"
            android:textSize="@dimen/text_size_button"
            android:textColor="@color/white"
            android:textFontWeight="700"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_orange_10"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/total_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/delivery_container">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_cart_sub_info"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textColor="@color/white"
                android:textFontWeight="700"
                tools:text="$6,000 us"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/delivery_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_top_add_to_cart_button"
            app:layout_constraintBottom_toTopOf="@id/second_divider">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/delivery_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/delivery"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_cart_sub_info"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/delivery_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textColor="@color/white"
                android:textFontWeight="700"
                tools:text="Free"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/first_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintBottom_toTopOf="@id/total_container"
            app:layout_constraintStart_toStartOf="parent"
            app:dividerColor="@color/white33"
            android:layout_marginBottom="@dimen/margin_bottom_first_divider"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>